<resources>
    <string name="app_name">Busy Labs</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="ap_data">*None*</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button_start">Start</string>
    <string name="lg26">LG26</string>
    <string name="l101">L101</string>
    <string name="l114">L114</string>
    <string name="lg25">LG25</string>
    <string name="locating">Locating…</string>
    <string name="lablocator">LabLocator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_room">RoomActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="room_name">[ROOM_NAME]</string>
    <string name="refresh_current_room">Refresh current room</string>
    <string name="least_busy_lab">Least busy lab:</string>
    <string name="checking">Checking…</string>
    <string name="n">[n]</string>
    <string name="busylabs_users_in_this_room">BusyLabs Users in this room:</string>
    <string name="friends_list">Friends List</string>
    <string name="l129">L129</string>
    <string name="l125">L125</string>
    <string name="l128">L128</string>
    <string name="lg27">LG27</string>
    <string name="BusyLabs">BusyLabs</string>
    <string name="friends_in_room">Friends in room</string>
    <string name="friends">Friends</string>
    <string name="room_map">room map</string>
    <string name="current_occupancy">Current Occupancy</string>
    <string name="percentage">Percentage Capacity</string>
    <string name="quietest_lab">Quietest Lab:</string>
</resources>