<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RoomActivity">

    <ImageButton
        android:id="@+id/imageButton_back"
        android:layout_width="66dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/next"
        android:onClick="onClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/textView_room_name"
        android:layout_width="246dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/room_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintStart_toEndOf="@+id/imageButton_back"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="394dp"
        android:layout_height="101dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_room_name">

        <TextView
            android:id="@+id/usersInRoomTextView"
            android:layout_width="242dp"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:text="@string/busylabs_users_in_this_room"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/roomPopulation"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:text="@string/n"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>